# OS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  program1.cpp  program2.cpp
include/: complex.hpp  functions.hpp  multiply.hpp  parent.hpp
src/: child1.cpp  child2.cpp  functions.cpp  lib1.cpp  lib2.cpp  multiply.cpp  parent.cpp
test/: Tests.cpp
tests/: test.cpp  test_lib1.cpp  test_lib2.cpp  tests.cpp
